[package]
name = "mobc-rusqlite"
version = "0.1.0"
authors = ["origo <mrorigo@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "rusqlite support for the mobc connection pool"
repository = "https://github.com/mrorigo/mobc-rusqlite"
keywords = ["sqlite", "rusqlite", "pool", "database", "async", "await"]

[dependencies]
mobc = { version = "0.8", path = "../mobc" }
futures = "0.3"
rusqlite = "0.29.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
